--- a/LAB1/index-4.html
+++ b/LAB1/index-4.html
@@ -8,29 +8,29 @@
 </head>
 <body>
     <h1 class="title">Таблицы</h1>
-    <table>
+    <table class="table1">
 
         <thead>
          <tr>
-             <th scope="col">#</th>
-             <th scope="col">Имя</th>
-             <th scope="col">E-mail</th>
-             <th scope="col">Дата регистрации</th>
+             <th class="table1" scope="col">#</th>
+             <th class="table1" scope="col">Имя</th>
+             <th class="table1" scope="col">E-mail</th>
+             <th class="table1" scope="col">Дата регистрации</th>
          </tr>
         </thead> 
  
         <tbody>
          <tr>
-             <th scope="row">1</th>
-             <td>Дмитрий</td>
-             <td>dima@mail.com</td>
-             <td>21.01.2020</td>
+             <th class="table1" scope="row">1</th>
+             <td class="table1">Дмитрий</td>
+             <td class="table1">dima@mail.com</td>
+             <td class="table1">21.01.2020</td>
          </tr>
          <tr>
-             <th scope="row">2</th>
-             <td>Александр</td>
-             <td>alex@mail.com</td>
-             <td>22.01.2020</td>
+             <th class="table1" scope="row">2</th>
+             <td class="table1">Александр</td>
+             <td class="table1">alex@mail.com</td>
+             <td class="table1">22.01.2020</td>
          </tr>
         </tbody>
  
