--- a/LAB2/Index.html
+++ b/LAB2/Index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="border:red 1px solid; color: orangered;">«HELLO WORLD!!!»<h1>.
+    <h1 style="border:red 1px solid; color: orangered;">«HELLO WORLD!!!»<h1>
 </body>
 </html>
