--- a/LAB2/index.html
+++ b/LAB2/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1  style=" border:red solid 1px;color: orangered;"> тег «HELLO WORLD!!!</h1>
+    <h1  style="width: max-content; border:red solid 1px;color: orangered;"> тег «HELLO WORLD!!!</h1>
 </body>
 </html>
