--- a/LAB2/index.html
+++ b/LAB2/index.html
@@ -7,5 +7,23 @@
 </head>
 <body>
     <h1  style="width: max-content; border:red solid 1px;color: orangered;"> тег «HELLO WORLD!!!</h1>
+    <style>
+        a {
+            color: pink;
+        }
+    </style>
+    <a href="https://google.com" target="_blank">Click me to open google.com</a>
+    <style> 
+     p {
+            color: blue;
+     }
+    </style>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt <br>
+        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco <br>
+        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in <br>
+        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat <br>
+        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
 </body>
 </html>
