--- a/LAB2/index1.html
+++ b/LAB2/index1.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1-3</title>
-    <link rel="stylesheet" href="./style/style.css">
+    <title>4.1.-4.2</title>
+    <link rel="stylesheet" href="./style/style1.css">
 </head>
 <body>
     <h1  style="width: max-content; border:red solid 1px;color: orangered;">«HELLO WORLD!!!</h1>
@@ -26,6 +26,7 @@
         voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat <br>
         non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
+    
     <div class="pages">
         <p><a href="index.html">Задания 1-3</a></p>
         <p><a href="index1.html">Задания 4.1.-4.2</a></p>
@@ -37,6 +38,5 @@
         <p><a href="index7.html">Задания 12-14</a></p>
         <p><a href="index8.html">Задания 15-16</a></p>
      </div>
-     
 </body>
 </html>
