--- a/LAB3/bootstraps/index8boot.html
+++ b/LAB3/bootstraps/index8boot.html
@@ -28,7 +28,18 @@
                 <div class="col"></div>
             </div>
         </div>
-        
+        <div class="pages">
+			<p><a href="../index.html">Задание 1</a></p>
+			<p><a href="./index1boot.html">Задание Bootstrap 1</a></p>
+			<p><a href="./index2boot.html">Задание Bootstrap 2</a></p>
+			<p><a href="./index3boot.html">Задание Bootstrap 3</a></p>
+			<p><a href="./index4boot.html">Задание Bootstrap 4</a></p>
+			<p><a href="./index5boot.html">Задание Bootstrap 5</a></p>
+			<p><a href="./index6boot.html">Задание Bootstrap 6</a></p>
+			<p><a href="./index7boot.html">Задание Bootstrap 7</a></p>
+			<p><a href="./index8boot.html">Задание Bootstrap 8</a></p>
+			<p><a href="../flexbox/indexFlex.html">Задание Flexbox 1 </a></p>
+		 </div>
     </body>
 </html>
 </html>
