--- a/LAB3/flexbox/indexFlex2.html
+++ b/LAB3/flexbox/indexFlex2.html
@@ -51,8 +51,11 @@
             </div>
         </div>
     </div>
-
-    
-
+    <div class="pages">
+        <p><a href="./indexFlex.html">Задание Flexbox 1 </a></p>
+        <p><a href="./indexFlex2.html">Задание Flexbox 2 </a></p>
+        <p><a href="../index.html">Задание 1</a></p>
+        <p><a href="../bootstraps/index1boot.html">Задание Bootstrap 1</a></p>
+     </div>
 </body>
 </html>
