--- a/LAB3/bootstraps/index2boot.html
+++ b/LAB3/bootstraps/index2boot.html
@@ -23,5 +23,17 @@
 		<!-- Bootstrap JS files DON'T REMOVE THESE FILES -->
 		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+		<div class="pages">
+			<p><a href="../index.html">Задание 1</a></p>
+			<p><a href="./index1boot.html">Задание Bootstrap 1</a></p>
+			<p><a href="./index2boot.html">Задание Bootstrap 2</a></p>
+			<p><a href="./index3boot.html">Задание Bootstrap 3</a></p>
+			<p><a href="./index4boot.html">Задание Bootstrap 4</a></p>
+			<p><a href="./index5boot.html">Задание Bootstrap 5</a></p>
+			<p><a href="./index6boot.html">Задание Bootstrap 6</a></p>
+			<p><a href="./index7boot.html">Задание Bootstrap 7</a></p>
+			<p><a href="./index8boot.html">Задание Bootstrap 8</a></p>
+			<p><a href="../flexbox/indexFlex.html">Задание Flexbox 1 </a></p>
+		 </div>
 	</body>
 </html>
