--- a/LAB3/index1.html
+++ b/LAB3/index1.html
@@ -9,8 +9,20 @@
 	<body>
         <img class="pic" src="./files/Ws8esSH03t0.jpg" alt="nig">
         <h1 class="txt">
-            В машине сидят негр и мексиканец. Кто за рулём?<br>
+            В машине сидят негр и<br> мексиканец.Кто за рулём?<br>
             Коп.
         </h1>
+		<div class="pages">
+			<p><a href="./index.html">Задание 1</a></p>
+			<p><a href="./index1.html">Задание 2</a></p>
+			<p><a href="./index2.html">Задание 3</a></p>
+			<p><a href="./index3.html">Задание 4</a></p>
+			<p><a href="./index4.html">Задание 5</a></p>
+			<p><a href="./index5.html">Задание 6</a></p>
+			<p><a href="./index6.html">Задание 7</a></p>
+			<p><a href="./index7.html">Задание 8</a></p>
+			<p><a href="./bootstraps/index1boot.html">Задание Bootstrap 1</a></p>
+			<p><a href="flexbox/indexFlex.html">Задание Flexbox 1 </a></p>
+		 </div>
 	</body>
 </html>
